completed error handling with modal and user feedback

--- a/assets/style.css
+++ b/assets/style.css
@@ -6,6 +6,30 @@ body{
     background-position-y: center;
     background-color:silver
 }
+.hide{
+    display:none
+}
+#modal{
+    position: fixed;
+    z-index: 15; 
+    left: 0;
+    top: 0;
+    right:0;
+    bottom:0;
+    overflow: auto; 
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4);
+}
+.modal-content{
+    background-color: #fefefe;
+    margin: 15% auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;  
+}
+#modal-btn{
+    float:right;
+}
 .navbar{
     padding: 10px;
     display: flex;
